mwd26-integration/source-app/main/default/objects/Integration_Request__c/Integration_Request__c.object-meta.xml
<CustomObject>
    <description>MWD26 demo — front-office integration request raised in the Source Org and pushed to the Back Office (Target Org).</description>
    <label>Integration Request</label>
    <pluralLabel>Integration Requests</pluralLabel>
    <nameField>
        <displayFormat>IR-{0000}</displayFormat>
        <label>Integration Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>