mwd26-integration/source-app/main/default/objects/Integration_Request__c/fields/External_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Record_Id__c</fullName>
    <label>External Record Id</label>
    <description>Id of the External_Request__c record created in the Target Org.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>