mwd26-integration/source-app/main/default/objects/Integration_Request__c/fields/Last_Synced_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced_Date__c</fullName>
    <label>Last Synced Date</label>
    <type>DateTime</type>
</CustomField>