mwd26-integration/source-app/main/default/objects/Integration_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Request_Name__c</columns>
    <columns>Customer_Email__c</columns>
    <columns>Status__c</columns>
    <columns>External_Record_Id__c</columns>
    <columns>Response_Message__c</columns>
    <columns>Last_Synced_Date__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>